--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </ul>
         </div>
 
-        <!-- For Small Device -->
+        <!-- For Small Device dropdown-->
         <div class="dropdown dropdown-right flex justify-start lg:hidden">
           <div tabindex="0" role="button" class=" bg-white border-0 m-1"><i class="fa-solid fa-bars-staggered"></i>
           </div>
@@ -74,7 +74,7 @@
         <div class="flex lg:hidden">
           <h2 class="text-3xl font-extrabold flex-1">Hockey <span class="text-tomato">'</span> s</h2>
         </div>
-
+        <!-- Dropdown end -->
         <div class="flex items-center gap-3">
           <div class="text-stone-400">
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -85,6 +85,46 @@
         </div>
       </div>
     </nav>
+
+    <!-- Banner Section -->
+    <section class="mt-10 relative">
+      <!-- Carousel -->
+      <div class="carousel w-full mb-3">
+        <div id="slide1" class="carousel-item relative w-full">
+          <img src="./Images/1.png" class="w-full" />
+          <div class="absolute flex justify-between left-5 right-5 top-1/2">
+            <a href="#slide4" class="btn btn-circle">❮</a> 
+            <a href="#slide2" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <div id="slide2" class="carousel-item relative w-full">
+          <img src="./Images/1.png" class="w-full" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide1" class="btn btn-circle">❮</a> 
+            <a href="#slide3" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <div id="slide3" class="carousel-item relative w-full">
+          <img src="./Images/1.png" class="w-full" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide2" class="btn btn-circle">❮</a> 
+            <a href="#slide4" class="btn btn-circle">❯</a>
+          </div>
+        </div> 
+        <div id="slide4" class="carousel-item relative w-full">
+          <img src="./Images/1.png" class="w-full" />
+          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
+            <a href="#slide3" class="btn btn-circle">❮</a> 
+            <a href="#slide1" class="btn btn-circle">❯</a>
+          </div>
+        </div>
+      </div>
+      <!-- Box writing -->
+      <div class="bg-black text-white w-full lg:w-1/2 space-y-3 p-8 lg:absolute right-8 bottom-10">
+        <h2 class="font-extrabold text-base lg:text-xl">Meet all the heroes from the field</h2>
+        <p class=" text-xs lg:text-base font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+      </div>
+    </section>
   </header>
 
   <main>
