professional hockeys club added with responsive

--- a/index.html
+++ b/index.html
@@ -93,28 +93,28 @@
         <div id="slide1" class="carousel-item relative w-full">
           <img src="./Images/1.png" class="w-full" />
           <div class="absolute flex justify-between left-5 right-5 top-1/2">
-            <a href="#slide4" class="btn btn-circle">❮</a> 
+            <a href="#slide4" class="btn btn-circle">❮</a>
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
-        </div> 
+        </div>
         <div id="slide2" class="carousel-item relative w-full">
           <img src="./Images/1.png" class="w-full" />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide1" class="btn btn-circle">❮</a> 
+            <a href="#slide1" class="btn btn-circle">❮</a>
             <a href="#slide3" class="btn btn-circle">❯</a>
           </div>
-        </div> 
+        </div>
         <div id="slide3" class="carousel-item relative w-full">
           <img src="./Images/1.png" class="w-full" />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide2" class="btn btn-circle">❮</a> 
+            <a href="#slide2" class="btn btn-circle">❮</a>
             <a href="#slide4" class="btn btn-circle">❯</a>
           </div>
-        </div> 
+        </div>
         <div id="slide4" class="carousel-item relative w-full">
           <img src="./Images/1.png" class="w-full" />
           <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide3" class="btn btn-circle">❮</a> 
+            <a href="#slide3" class="btn btn-circle">❮</a>
             <a href="#slide1" class="btn btn-circle">❯</a>
           </div>
         </div>
@@ -122,13 +122,65 @@
       <!-- Box writing -->
       <div class="bg-black text-white w-full lg:w-1/2 space-y-3 p-8 lg:absolute right-8 bottom-10">
         <h2 class="font-extrabold text-base lg:text-xl">Meet all the heroes from the field</h2>
-        <p class=" text-xs lg:text-base font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        <p class=" text-xs lg:text-base font-medium">On the expansive field where dreams are woven into reality, a
+          tapestry of heroes emerges, each contributing a unique thread to the narrative of success. </p>
       </div>
     </section>
   </header>
 
-  <main>
-
+  <main class="container mx-auto">
+    <!-- Professional hockey club -->
+    <section>
+      <div class="mt-10 text-center space-y-4 mb-8">
+        <h2 class="text-3xl font-extrabold">Professional Hockeys Club</h2>
+        <p class="font-medium">The professional hockey club, with its rich history and competitive spirit, stands <br>
+          as a symbol of excellence in the world of sports.</p>
+      </div>
+      <div class="grid grid-cols-1 lg:grid-cols-4 gap-3 mx-10">
+        
+        <!-- 1 -->
+        <div>
+          <div class="flex justify-center">
+            <div class="radial-progress text-tomato font-bold mb-5" style="--value:87;" role="progressbar">87%</div>
+          </div>
+          <div class="text-center space-y-3">
+            <p class="text-xl font-semibold">Prayer Facility</p>
+            <p>The prayer facility stands as a sanctuary for spiritual reflection and solace.</p>
+          </div>
+        </div>
+        <!-- 2 -->
+        <div>
+          <div class="flex justify-center">
+            <div class="radial-progress text-[#4ade80] font-bold mb-5" style="--value:95;" role="progressbar">95%</div>
+          </div>
+          <div class="text-center space-y-3">
+            <p class="text-xl font-semibold">Experienced Coach</p>
+            <p>An experienced coach serves as the guiding force, the maestro behind the scenes.</p>
+          </div>
+        </div>
+        <!-- 3 -->
+        <div>
+          <div class="flex justify-center">
+            <div class="radial-progress text-[#fbbf24] font-bold mb-5" style="--value:90;" role="progressbar">90%</div>
+          </div>
+          <div class="text-center space-y-3">
+            <p class="text-xl font-semibold">Senior Player</p>
+            <p>A senior player stands as a venerable figure, experience, and unwavering commitment to the game. </p>
+          </div>
+        </div>
+        <!-- 4 -->
+        <div>
+          <div class="flex justify-center">
+            <div class="radial-progress text-[#3b82f6] font-bold mb-5" style="--value:80;" role="progressbar">80%</div>
+          </div>
+          <div class="text-center space-y-3">
+            <p class="text-xl font-semibold">Training Ground</p>
+            <p>
+              Coaches, armed with expertise, impart valuable knowledge, refining techniques and cultivating.</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
