program sections added with small device responsive

--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
   <main class="container mx-auto">
     <!-- Professional hockey club -->
     <section>
-      <div class="mt-10 text-center space-y-4 mb-8">
+      <div class="mt-20 text-center space-y-4 mb-8">
         <h2 class="text-3xl font-extrabold">Professional Hockeys Club</h2>
         <p class="font-medium">The professional hockey club, with its rich history and competitive spirit, stands <br>
           as a symbol of excellence in the world of sports.</p>
       </div>
       <div class="grid grid-cols-1 lg:grid-cols-4 gap-3 mx-10">
-        
+
         <!-- 1 -->
         <div>
           <div class="flex justify-center">
-            <div class="radial-progress text-tomato font-bold mb-5" style="--value:87;" role="progressbar">87%</div>
+            <div class="radial-progress  text-tomato font-bold mb-5" style="--value:87;" role="progressbar">87%</div>
           </div>
           <div class="text-center space-y-3">
             <p class="text-xl font-semibold">Prayer Facility</p>
@@ -181,6 +181,49 @@
         </div>
       </div>
     </section>
+
+    <!-- Program section -->
+    <section class="mt-20">
+      <div class="text-center space-y-3">
+        <h2 class="text-3xl font-extrabold">Program Sections</h2>
+        <p class="font-medium">
+          Program sections refer to distinct parts or segments within a computer program, each serving a specific
+          purpose <br>
+          and contributing to the overall functionality of the software.
+        </p>
+      </div>
+      <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 mt-10">
+        <!-- box-1 -->
+        <div class="bg-[url('../images/2.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
+          <h2 class="text-2xl font-extrabold pt-16">Junior Program</h2>
+          <p class="font-medium lg:w-3/4">A junior programmer, often starting their career in the field of software development,
+            is an individual who
+            is in the early stages of gaining practical experience and expertise in programming.
+          </p>
+          <button class="btn bg-tomato border-0 text-[#FFF] font-bold lg:text-lg">Register Now!</button>
+        </div>
+        <!-- box-2 -->
+        <div class="bg-[url('../images/3.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
+          <h2 class="text-2xl font-extrabold pt-16">Teenager Program</h2>
+          <p class="font-medium lg:w-3/4">A teenager engaged in programming is an individual navigating the dynamic world of
+            coding and software development during their adolescent years.
+          </p>
+          <button class="btn bg-tomato border-0 text-[#FFF] font-semibold lg:text-lg">Register Now!</button>
+        </div>
+        <!-- box-3 -->
+        <div
+          class=" col-span-1 lg:col-span-2 bg-[url('../images/4.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
+          <h2 class="text-2xl font-extrabold pt-32">Professional Program</h2>
+          <p class="font-medium lg:w-1/2">A professional programmer is an individual who has acquired significant  expertise
+            and experience in the field of software development. Professionals in programming typically possess
+            advanced knowledge of programming languages,  algorithms, and software design principles.
+          </p>
+          <button class="btn bg-tomato border-0 text-[#FFF] font-semibold lg:text-lg">Register Now!</button>
+        </div>
+      </div>
+
+    </section>
+
   </main>
 
 
