our new products section added with responsive

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <!-- 1 -->
         <div>
           <div class="flex justify-center">
-            <div class="radial-progress  text-tomato font-bold mb-5" style="--value:87;" role="progressbar">87%</div>
+            <div class="radial-progress  text-tomato font-bold mb-5" style="--value:87;" role="progressbar"><span class="text-black">87%</span></div>
           </div>
           <div class="text-center space-y-3">
             <p class="text-xl font-semibold">Prayer Facility</p>
@@ -151,7 +151,7 @@
         <!-- 2 -->
         <div>
           <div class="flex justify-center">
-            <div class="radial-progress text-[#4ade80] font-bold mb-5" style="--value:95;" role="progressbar">95%</div>
+            <div class="radial-progress text-[#4ade80] font-bold mb-5" style="--value:95;" role="progressbar"><span class="text-black">95%</span></div>
           </div>
           <div class="text-center space-y-3">
             <p class="text-xl font-semibold">Experienced Coach</p>
@@ -161,7 +161,7 @@
         <!-- 3 -->
         <div>
           <div class="flex justify-center">
-            <div class="radial-progress text-[#fbbf24] font-bold mb-5" style="--value:90;" role="progressbar">90%</div>
+            <div class="radial-progress text-[#fbbf24] font-bold mb-5" style="--value:90;" role="progressbar"><span class="text-black">90%</span></div>
           </div>
           <div class="text-center space-y-3">
             <p class="text-xl font-semibold">Senior Player</p>
@@ -171,7 +171,7 @@
         <!-- 4 -->
         <div>
           <div class="flex justify-center">
-            <div class="radial-progress text-[#3b82f6] font-bold mb-5" style="--value:80;" role="progressbar">80%</div>
+            <div class="radial-progress text-[#3b82f6] font-bold mb-5" style="--value:80;" role="progressbar"><span class="text-black">80%</span></div>
           </div>
           <div class="text-center space-y-3">
             <p class="text-xl font-semibold">Training Ground</p>
@@ -196,7 +196,8 @@
         <!-- box-1 -->
         <div class="bg-[url('../images/2.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
           <h2 class="text-2xl font-extrabold pt-16">Junior Program</h2>
-          <p class="font-medium lg:w-3/4">A junior programmer, often starting their career in the field of software development,
+          <p class="font-medium lg:w-3/4">A junior programmer, often starting their career in the field of software
+            development,
             is an individual who
             is in the early stages of gaining practical experience and expertise in programming.
           </p>
@@ -205,7 +206,8 @@
         <!-- box-2 -->
         <div class="bg-[url('../images/3.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
           <h2 class="text-2xl font-extrabold pt-16">Teenager Program</h2>
-          <p class="font-medium lg:w-3/4">A teenager engaged in programming is an individual navigating the dynamic world of
+          <p class="font-medium lg:w-3/4">A teenager engaged in programming is an individual navigating the dynamic
+            world of
             coding and software development during their adolescent years.
           </p>
           <button class="btn bg-tomato border-0 text-[#FFF] font-semibold lg:text-lg">Register Now!</button>
@@ -214,14 +216,219 @@
         <div
           class=" col-span-1 lg:col-span-2 bg-[url('../images/4.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
           <h2 class="text-2xl font-extrabold pt-32">Professional Program</h2>
-          <p class="font-medium lg:w-1/2">A professional programmer is an individual who has acquired significant  expertise
+          <p class="font-medium lg:w-1/2">A professional programmer is an individual who has acquired significant
+            expertise
             and experience in the field of software development. Professionals in programming typically possess
-            advanced knowledge of programming languages,  algorithms, and software design principles.
+            advanced knowledge of programming languages, algorithms, and software design principles.
           </p>
           <button class="btn bg-tomato border-0 text-[#FFF] font-semibold lg:text-lg">Register Now!</button>
         </div>
       </div>
 
+    </section>
+
+    <!-- new product sections -->
+    <section class="mt-20 ">
+      <div class="text-center space-y-3">
+        <h2 class="text-3xl font-extrabold">Our New Products</h2>
+        <p class="font-medium">From state-of-the-art electronics to revolutionary lifestyle gadgets, our new products
+          are crafted with <br> precision and ingenuity to meet the evolving needs of our discerning customers. </p>
+      </div>
+      <!-- product container -->
+      <div class="mt-10 grid grid-cols-1 lg:grid-cols-2 gap-5">
+        <!-- container-1 -->
+        <div class="lg:flex gap-5 p-5 border rounded-lg">
+          <div class="w-full lg:w-1/2 mb-5 lg:mb-0">
+            <img src="./Images/5.png"  alt="">
+          </div>
+          <div>
+            <div class="flex gap-5 mb-3">
+              <!-- rating, view, love -->
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-star text-[#f59e0b]"></i>
+                <p>5.0</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <h2 class="text-xl font-extrabold mb-3">World Cup Flags Football</h2>
+            <p class="font-medium mb-3">In the FIFA World Cup, teams from around the world compete for the prestigious title. </p>
+            <div class="flex gap-5 font-medium">
+              <p class="text-tomato font-extrabold">Price - $22.00</p>
+            <div class="flex gap-2  items-center">
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <!-- container-2 -->
+        <div class="lg:flex gap-5  p-5 border rounded-lg">
+          <div class="w-full lg:w-1/2  mb-5 lg:mb-0">
+            <img src="./Images/6.png" alt="">
+          </div>
+          <div>
+            <div class="flex gap-5 mb-3">
+              <!-- rating, view, love -->
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-star text-[#f59e0b]"></i>
+                <p>5.0</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <h2 class="text-xl font-extrabold mb-3">World Cup Flags Football</h2>
+            <p class="font-medium mb-3">In the FIFA World Cup, teams from around the world compete for the prestigious title. </p>
+            <div class="flex gap-5 font-medium">
+              <p class="text-tomato font-extrabold">Price - $22.00</p>
+            <div class="flex gap-2  items-center">
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <!-- container-3 -->
+        <div class="lg:flex gap-5 p-5 border rounded-lg">
+          <div class="w-full lg:w-1/2  mb-5 lg:mb-0">
+            <img src="./Images/7.png" alt="">
+          </div>
+          <div>
+            <div class="flex gap-5 mb-3">
+              <!-- rating, view, love -->
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-star text-[#f59e0b]"></i>
+                <p>5.0</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <h2 class="text-xl font-extrabold mb-3">Cap For Hockeys</h2>
+            <p class="font-medium mb-3">Fans often wear caps or hats to support their favorite hockey teams.  </p>
+            <div class="flex gap-5 font-medium">
+              <p class="text-tomato font-extrabold">Price - $22.00</p>
+            <div class="flex gap-2  items-center">
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <!-- container-4 -->
+        <div class="lg:flex gap-5 p-5 border rounded-lg">
+          <div class="w-full lg:w-1/2  mb-5 lg:mb-0">
+            <img src="./Images/8.png" alt="">
+          </div>
+          <div>
+            <div class="flex gap-5 mb-3">
+              <!-- rating, view, love -->
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-star text-[#f59e0b]"></i>
+                <p>5.0</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <h2 class="text-xl font-extrabold mb-3">World Cup Flags Football</h2>
+            <p class="font-medium mb-3">In the FIFA World Cup, teams from around the world compete for the prestigious title. </p>
+            <div class="flex gap-5 font-medium">
+              <p class="text-tomato font-extrabold">Price - $22.00</p>
+            <div class="flex gap-2  items-center">
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <!-- container-5 -->
+        <div class="lg:flex gap-5 p-5 border rounded-lg">
+          <div class="w-full lg:w-1/2  mb-5 lg:mb-0">
+            <img src="./Images/9.png" alt="">
+          </div>
+          <div>
+            <div class="flex gap-5 mb-3">
+              <!-- rating, view, love -->
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-star text-[#f59e0b]"></i>
+                <p>5.0</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <h2 class="text-xl font-extrabold mb-3">World Cup Flags Football</h2>
+            <p class="font-medium mb-3">In the FIFA World Cup, teams from around the world compete for the prestigious title. </p>
+            <div class="flex gap-5 font-medium">
+              <p class="text-tomato font-extrabold">Price - $22.00</p>
+            <div class="flex gap-2  items-center">
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+            </div>
+          </div>
+        </div>
+        <!-- container-6 -->
+        <div class="lg:flex gap-5 p-5 border rounded-lg">
+          <div class="w-full lg:w-1/2  mb-5 lg:mb-0">
+            <img src="./Images/10.png" alt="">
+          </div>
+          <div>
+            <div class="flex gap-5 mb-3">
+              <!-- rating, view, love -->
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-star text-[#f59e0b]"></i>
+                <p>5.0</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-solid fa-eye"></i>
+                <p>20</p>
+              </div>
+              <div class="flex gap-2 justify-center items-center">
+                <i class="fa-regular fa-heart"></i>
+                <p>200</p>
+              </div>
+            </div>
+            <h2 class="text-xl font-extrabold mb-3">World Cup Flags Football</h2>
+            <p class="font-medium mb-3">In the FIFA World Cup, teams from around the world compete for the prestigious title. </p>
+            <div class="flex gap-5 font-medium">
+              <p class="text-tomato font-extrabold">Price - $22.00</p>
+            <div class="flex gap-2  items-center">
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Delivery Fee : Free</p>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
   </main>
