client question section added with responsive

--- a/index.html
+++ b/index.html
@@ -431,6 +431,84 @@
       </div>
     </section>
 
+    <!-- clients question section-->
+    <section class="mt-20">
+      <div class="text-center space-y-3">
+        <h2 class="text-3xl font-extrabold">Clients Question</h2>
+        <p>Clients often seek clarity, solutions, or additional information about products or services. <br> It's essential to listen actively,  understand their concerns, and provide well-informed responses. </p>
+      </div>
+      
+      <div class=" mt-10 p-10 border lg:flex gap-20 justify-center items-center">
+        <!-- image -->
+        <div class="mb-5 lg:mb-0">
+          <img src="./Images/11.png" alt="">
+        </div>
+        <!-- question -->
+        <div class="flex-1">
+          <!-- question-1 -->
+          <div class="collapse collapse-plus border-b">
+            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <div class="collapse-title text-xl font-semibold">
+              <h2>Our Equipment</h2>
+            </div>
+            <div class="collapse-content"> 
+              <p>At our hockey facility, we prioritize the quality and performance of our equipment to ensure an optimal experience for players and enthusiasts alike. </p>
+            </div>
+          </div>
+          <!-- question-2 -->
+          <div class="collapse collapse-plus border-b">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-semibold">
+              <h2>Hockey Training</h2>
+            </div>
+            <div class="collapse-content"> 
+              <p>At our hockey training center, we are dedicated to fostering the growth and development of aspiring hockey players.</p>
+            </div>
+          </div>
+          <!-- question-3 -->
+          <div class="collapse collapse-plus border-b">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-semibold">
+              <h2>Private Lessons</h2>
+            </div>
+            <div class="collapse-content"> 
+              <p>At our hockey academy, we understand that personalized attention can make a significant difference in a player's development.</p>
+            </div>
+          </div>
+          <!-- question-4 -->
+          <div class="collapse collapse-plus border-b">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-semibold">
+              <h2>Ski Touring</h2>
+            </div>
+            <div class="collapse-content"> 
+              <p> Ski touring typically involves skiing in unmarked or backcountry terrain, often with climbing uphill before descending</p>
+            </div>
+          </div>
+          <!-- question-5 -->
+          <div class="collapse collapse-plus border-b">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-semibold">
+              <h2>Booking</h2>
+            </div>
+            <div class="collapse-content"> 
+              <p>At our premier hockey facility, we've streamlined the booking process to make it convenient for enthusiasts and teams to reserve our top-notch facilities.</p>
+            </div>
+          </div>
+          <!-- question-6 -->
+          <div class="collapse collapse-plus border-b">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-semibold">
+              <h2>Pricings</h2>
+            </div>
+            <div class="collapse-content"> 
+              <p>At our hockey facility, we offer transparent and competitive pricing to cater to the diverse needs of our patrons. </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
   </main>
 
 
