--- a/index.html
+++ b/index.html
@@ -509,6 +509,76 @@
       </div>
     </section>
 
+    <!-- get in touch section -->
+    <section class="mt-20 mb-20">
+      <div class="text-center space-y-3">
+        <h2 class="text-3xl font-extrabold">Get In Touch</h2>
+        <p class="font-semibold">If you're ready to elevate your hockey experience, we invite you to get in touch with us today. <br> Join us in the exciting world of hockey, and let us help you make the most of your passion for the game. </p>
+      </div>
+
+      <!-- form -->
+      <div class="mt-10 lg:grid grid-cols-3 gap-28">
+        <div class="p-8 border">
+          <!-- phone -->
+          <div class="p-10 mb-6 bg-[#BCED6D1A]">
+            <img src="./Images/call.png" alt="" class="mb-5">
+            <p>Phone Number : <br>
+              <span class="text-black font-semibold">(+62) 123-321-543</span></p>
+          </div>
+          <!-- email -->
+          <div class="p-10 mb-6 bg-[#FDDD5F1A]">
+            <img src="./Images/email.png" alt="" class="mb-5">
+            <p>Email : <br>
+              <span class="text-black font-semibold">hockeys@support.com</span></p>
+          </div>
+          <!-- location -->
+          <div class="p-10 bg-[#629CF31A]">
+            <img src="./Images/location.png" alt="" class="mb-5">
+            <p>Location : <br>
+              <span class="text-black font-semibold">152/1 Mohakhali Wireless Gate</span></p>
+          </div>
+        </div>
+        <div class="lg:col-span-2 p-10 lg:p-0">
+          <div class="lg:grid grid-cols-2 gap-5">
+            <div class="mb-3">
+              <h2 class="text-lg font-bold mb-4">Your Name</h2>
+              <input type="text" placeholder="Enter your full name" class="input bg-[#13131808] w-full " />
+            </div>
+            <div>
+              <h2 class="text-lg font-bold mb-4">Your Email</h2>
+              <input type="text" placeholder="Enter your email" class="input bg-[#13131808] w-full " />
+            </div>
+            <div>
+              <h2 class="text-lg font-bold mb-4">Subject</h2>
+              <input type="text" placeholder="Enter your subject" class="input bg-[#13131808] w-full " />
+            </div>
+            <div>
+              <h2 class="text-lg font-bold mb-4">Phone Number</h2>
+              <input type="text" placeholder="Enter your phone number" class="input bg-[#13131808] w-full " />
+            </div>
+          </div>
+          <div class="mb-4">
+            <h2 class="text-lg font-bold mt-4 mb-4 col-span-3">Message</h2>
+            <textarea class="textarea h-[200px] lg:h-[400px] w-full  bg-[#13131808]"  placeholder="Write your message"></textarea>
+          </div>
+          <button class="btn bg-tomato w-full  text-white">Send Message</button>
+        </div>
+      </div>
+
+      <!-- social media -->
+      <div class="mt-5 lg:mt-10 p-9 bg-[#13131808]">
+        <div>
+          <h2 class="text-2xl font-extrabold text-center mb-5">Social Media</h2>
+        </div>
+        <div class="flex justify-center gap-10">
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-github"></i>
+        </div>
+      </div>
+    </section>
+
   </main>
 
 
