--- a/index.html
+++ b/index.html
@@ -578,10 +578,52 @@
         </div>
       </div>
     </section>
-
   </main>
 
-
+  <!-- footer section -->
+  <footer class="footer p-10 bg-black text-white text-base-content ">
+    <!-- 1st column -->
+    <div class="grid gap-5 grid-cols-2 lg:grid-cols-4">
+      <aside class="space-y-3 col-span-2 lg:col-span-1">
+        <h2 class="font-extrabold text-2xl">Get In Touch</h2>
+        <p class="font-medium">Get in touch with us now, and let's take the first step together <br> toward enhancing your hockey journey. </p>
+        <div class="flex justify-center items-center gap-2">
+          <i class="fa-regular fa-envelope text-red-500"></i>
+          <p class="font-medium">hockeys@support.com</p>
+        </div>
+        <div class="flex justify-center items-center gap-2">
+          <i class="fa-solid fa-phone text-red-500"></i>
+          <p class="font-medium">(+62) 123-321-543</p>
+        </div>
+      </aside> 
+      <!-- 2nd column -->
+      <nav class="space-y-2">
+        <header class="font-bold text-lg">Company</header> 
+        <a class="font-semibold">About Us</a>
+        <a class="font-semibold">Leadership</a>
+        <a class="font-semibold">Careers</a>
+        <a class="font-semibold">News & Article</a>
+        <a class="font-semibold">Legal Notice</a>
+      </nav> 
+      <!-- 3rd column -->
+      <nav class="space-y-2">
+        <header class="font-bold text-lg">Support</header> 
+        <a class="font-semibold">Help Center</a>
+        <a class="font-semibold">FAQ</a>
+        <a class="font-semibold">Ticket Support</a>
+        <a class="font-semibold">Contact Us</a>
+      </nav> 
+      <!-- 4th column -->
+      <nav class="space-y-2 col-span-2 lg:col-span-1">
+        <header class="font-bold text-lg">Services</header> 
+        <a class="font-semibold">Academy</a>
+        <a class="font-semibold">Group Lesson</a>
+        <a class="font-semibold">Private Lesson</a>
+        <a class="font-semibold">Hockeys for Kids</a>
+        <a class="font-semibold">Hockeys for Adults</a>
+      </nav>
+    </div>
+  </footer>
 </body>
 
 </html>
