--- a/index.html
+++ b/index.html
@@ -583,45 +583,47 @@
   <!-- footer section -->
   <footer class="footer p-10 bg-black text-white text-base-content ">
     <!-- 1st column -->
-    <div class="grid gap-5 grid-cols-2 lg:grid-cols-4">
-      <aside class="space-y-3 col-span-2 lg:col-span-1">
-        <h2 class="font-extrabold text-2xl">Get In Touch</h2>
-        <p class="font-medium">Get in touch with us now, and let's take the first step together <br> toward enhancing your hockey journey. </p>
-        <div class="flex justify-center items-center gap-2">
+    <div class=" p-10 grid gap-20 justify-center grid-cols-2 lg:grid-cols-5">
+      <aside class="space-y-4 col-span-2 lg:col-span-2">
+        <h2 class="font-extrabold text-2xl text-center lg:text-start">Get In Touch</h2>
+        <p class="font-medium text-center lg:text-start">Get in touch with us now, and let's take the first step together toward enhancing your hockey journey. </p>
+        <div class="flex justify-center lg:justify-start items-center gap-2">
           <i class="fa-regular fa-envelope text-red-500"></i>
           <p class="font-medium">hockeys@support.com</p>
         </div>
-        <div class="flex justify-center items-center gap-2">
+        <div class="flex justify-center lg:justify-start items-center gap-2">
           <i class="fa-solid fa-phone text-red-500"></i>
           <p class="font-medium">(+62) 123-321-543</p>
         </div>
       </aside> 
       <!-- 2nd column -->
-      <nav class="space-y-2">
-        <header class="font-bold text-lg">Company</header> 
-        <a class="font-semibold">About Us</a>
-        <a class="font-semibold">Leadership</a>
-        <a class="font-semibold">Careers</a>
-        <a class="font-semibold">News & Article</a>
-        <a class="font-semibold">Legal Notice</a>
-      </nav> 
+      <div class="space-y-2 text-center lg:text-start">
+        <li class="font-bold text-lg list-none mb-5 text-center lg:text-start">Company</li>
+        <li class="font-semibold list-none">About Us</li>
+        <li class="font-semibold list-none">Leadership</li>
+        <li class="font-semibold list-none">Careers</li>
+        <li class="font-semibold list-none">News & Article</li>
+        <li class="font-semibold list-none">Legal Notice</li>
+      </div>
+      
       <!-- 3rd column -->
-      <nav class="space-y-2">
-        <header class="font-bold text-lg">Support</header> 
-        <a class="font-semibold">Help Center</a>
-        <a class="font-semibold">FAQ</a>
-        <a class="font-semibold">Ticket Support</a>
-        <a class="font-semibold">Contact Us</a>
-      </nav> 
+      <div class="space-y-2 text-center lg:text-start">
+        <li class="font-bold text-lg list-none mb-5">Support</li>
+        <li class="font-semibold list-none">Help Center</li>
+        <li class="font-semibold list-none">FAQ</li>
+        <li class="font-semibold list-none">Ticket Support</li>
+        <li class="font-semibold list-none">Contact Us</li>
+      </div>
+
       <!-- 4th column -->
-      <nav class="space-y-2 col-span-2 lg:col-span-1">
-        <header class="font-bold text-lg">Services</header> 
-        <a class="font-semibold">Academy</a>
-        <a class="font-semibold">Group Lesson</a>
-        <a class="font-semibold">Private Lesson</a>
-        <a class="font-semibold">Hockeys for Kids</a>
-        <a class="font-semibold">Hockeys for Adults</a>
-      </nav>
+      <div class="space-y-2 col-span-2 mx-auto lg:mx-0 lg:col-span-1 text-center lg:text-start">
+        <li class="font-bold text-lg list-none mb-5">Services</li>
+        <li class="font-semibold list-none">Academy</li>
+        <li class="font-semibold list-none">Group Lesson</li>
+        <li class="font-semibold list-none">Private Lesson</li>
+        <li class="font-semibold list-none">Hockeys for Kids</li>
+        <li class="font-semibold list-none">Hockeys for Adults</li>
+      </div>
     </div>
   </footer>
 </body>
