--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       </div>
       <div class="grid grid-cols-1 lg:grid-cols-2 gap-5 mt-10">
         <!-- box-1 -->
-        <div class="bg-[linear-gradient(180deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../Images/2.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
+        <div class="bg-[linear-gradient(180deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('./Images/2.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
           <h2 class="text-2xl font-extrabold pt-16">Junior Program</h2>
           <p class="font-medium lg:w-3/4">A junior programmer, often starting their career in the field of software
             development,
@@ -204,7 +204,7 @@
           <button class="btn bg-tomato border-0 text-[#FFF] font-bold lg:text-lg">Register Now!</button>
         </div>
         <!-- box-2 -->
-        <div class="bg-[linear-gradient(180deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../Images/3.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
+        <div class="bg-[linear-gradient(180deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('./Images/3.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
           <h2 class="text-2xl font-extrabold pt-16">Teenager Program</h2>
           <p class="font-medium lg:w-3/4">A teenager engaged in programming is an individual navigating the dynamic
             world of
@@ -214,7 +214,7 @@
         </div>
         <!-- box-3 -->
         <div
-          class=" col-span-1 lg:col-span-2 bg-[linear-gradient(180deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../Images/4.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
+          class=" col-span-1 lg:col-span-2 bg-[linear-gradient(180deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('./Images/4.png')] bg-cover bg-center w-full h-full text-white rounded-lg p-10 space-y-3">
           <h2 class="text-2xl font-extrabold pt-32">Professional Program</h2>
           <p class="font-medium lg:w-1/2">A professional programmer is an individual who has acquired significant
             expertise
